[metadata]
name = vulkian
version = 2021.1
url = https://github.com/vulkian
description = 
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment
    Topic :: Multimedia
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Rendering
author = Vulkian
project_urls =
    Git=https://github.com/vulkian/vulkian
    Docs=https://vulkian.rtfd.io
